--- a/app/src/main/res/menu/menu_calendar_option.xml
+++ b/app/src/main/res/menu/menu_calendar_option.xml
@@ -5,10 +5,10 @@
 
     <!--menu yang akan tampil pada toolbar-->
     <item
-    android:id="@+id/action_refresh"
-    android:orderInCategory="100"
-    android:title="@string/action_refresh"
-    android:icon="@drawable/ic_refresh_white_36dp"
-    app:showAsAction="always" />
+        android:id="@+id/action_calendar"
+        android:orderInCategory="100"
+        android:title="@string/action_search"
+        android:icon="@drawable/ic_date_range_white_24dp"
+        app:showAsAction="always" />
 
 </menu>
