--- a/app/src/main/res/layout/content_work_date.xml
+++ b/app/src/main/res/layout/content_work_date.xml
@@ -15,12 +15,13 @@
         android:layout_height="match_parent"
         android:layout_margin="@dimen/xmin_padding">
 
-        <CalendarView
+        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
             android:id="@+id/calendarView"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginTop="16dp" />
+            android:layout_height="wrap_content"
+            app:mcv_showOtherDates="all"
+            app:mcv_selectionColor="#00F"
+            />
 
     </android.support.v7.widget.CardView>
 
