--- a/app/src/main/res/layout/content_member_profile.xml
+++ b/app/src/main/res/layout/content_member_profile.xml
@@ -63,7 +63,10 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="@dimen/xmin_padding"
+                        android:paddingEnd="@dimen/xmin_padding"
+                        android:paddingStart="@dimen/xmin_padding"
                         android:textColor="@color/colorWhite"
+                        android:background="@color/colorBlack54"
                         android:textSize="@dimen/almost_tiny_text"
                         />
 
